--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,25 @@
 apply plugin: 'com.android.application'
 apply plugin: 'adeum'
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.appdynamics:appdynamics-gradle-plugin:4.5.4.1262'
+    }
+}
+
+repositories {
+    jcenter()
+}
 
 android {
     compileSdkVersion 23
     buildToolsVersion '25.0.3'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
-        applicationId "com.appdynamics.demo.android.ECommerce"
+        applicationId 'com.appdynamics.demo.android.ECommerce.garces'
         minSdkVersion 4
         targetSdkVersion 19
     }
@@ -28,6 +41,6 @@ dependencies {
     //Uncomment to use local file-based adeum-maven-repo (version should be 1.0)
     //compile 'com.appdynamics:appdynamics-runtime:1.0'
     //Uncomment to use GA plugin from jcenter (choose version)
-    compile 'com.appdynamics:appdynamics-runtime:4.2.2.0'
+    //compile 'com.appdynamics:appdynamics-runtime:4.2.2.0'
     androidTestCompile fileTree(include: ['*.jar'], dir: 'libs')
 }
